--- a/截取字符串形式的显示收缩展开.html
+++ b/截取字符串形式的显示收缩展开.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>ÎÞ±êÌâÎÄµµ</title>
+<title>字符串段落截取</title>
 <style>
 *{ margin:0; padding:0}
 p{ width:320px; border:1px solid red; margin:100px auto}
